<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Verify">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:textSize="30sp"
                android:textColor="@color/purple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_verify_your_email_address_by_clicking_the_link_sent_to"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/verify_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="prashiklikhar009@gmail.com"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="#03A9F4"/>

            <Button
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:text="@string/resend"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/verify_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/go_to_login"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:cornerRadius="20dp" />

</LinearLayout>