<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Forget_Password">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/fg_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    style="@style/backArrow"/>

                <TextView
                    android:id="@+id/forgetText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/forget_password1"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="28sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/fg_email"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                style="@style/emailInput"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/fgButton"
                android:text="@string/next"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>